<resources>
    <string name="app_name">Conservação de Energia</string>
    <string name="hello_world">Hello World!</string>
    <string name="main_title">Conservação de Energia</string>
    <string name="lorem_ipsum">Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.</string>
    <string name="Começar">Começar</string>
    <string name="novo_registro">Novo Registro</string>
    <string name="exportar_csv">Exportar .csv</string>
    <string name="create_project">Criar Projeto</string>



    <!-- LOCAL -->

    <string name="cidade">CIDADE</string>
    <string name="local">LOCAL</string>

    <!-- MOTOR -->
    <string name="motor">MOTOR</string>
    <string name="tensao">Tensão (V)</string>
    <string name="corrente">Corrente (A)</string>
    <string name="potencia_ativa">Potência Ativa (kW/cv)</string>
    <string name="potencia_reativa">Potência Reativa (kVAr)</string>
    <string name="fator_potencia">Fator de Potência</string>
    <string name="rotacao">Rotação (rpm)</string>
    <string name="fabricante_motor">Fabricante</string>

    <!-- BOMBA -->
    <string name="bomba">BOMBA</string>
    <string name="vazao">Vazão (m³/h)</string>
    <string name="altura_monometrica">Altura Monométrica (mca)</string>
    <string name="fabricante_bomba">Fabricante</string>

    <!-- SISTEMA -->
    <string name="tipo_partida">Tipo de Partida</string>
    <string name="banco_capacitores">Banco de Capacitores</string>
    <string name="sistema_supervisionado">Sistema Supervisionado</string>

    <!-- TITLES -->
    <string name="title_placa">PLACA</string>
    <string name="title_motor">MOTOR</string>
    <string name="title_motor_bomba">MOTOR/BOMBA</string>
    <string name="title_bomba">/BOMBA</string>
    <string name="title_sistema">SISTEMA</string>
    <string name="title_fotos">FOTOS</string>
    <string name="title_conjunto">CONJUNTO</string>
    <string name="title_painel">PAINEL</string>
    <string name="title_banco_capacitores">BANCO DE CAPACITORES</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Hello blank fragment1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_project">Novo projeto</string>
    <string name="endereco">ENDEREÇO</string>
    <string name="num_instalacao">Número da Instalação</string>
    <string name="projeto">PROJETO</string>
</resources>
