<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DadosMedicaoFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="201dp"
        android:gravity="center"
        android:orientation="vertical">

        <!-- MOTOR -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:elegantTextHeight="true"
            android:gravity="center_horizontal"
            android:text="@string/motor"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tensao_medicao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/tensao"
            android:inputType="numberDecimal"
            android:singleLine="true" />

        <EditText
            android:id="@+id/corrente_medicao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/corrente"
            android:inputType="numberDecimal"
            android:singleLine="true" />

        <EditText
            android:id="@+id/potencia_ativa_medicao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/potencia_ativa"
            android:inputType="numberDecimal"
            android:singleLine="true" />

        <EditText
            android:id="@+id/potencia_reativa_medicao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/potencia_reativa"
            android:inputType="numberDecimal"
            android:singleLine="true" />

        <EditText
            android:id="@+id/fator_potencia_medicao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/fator_potencia"
            android:inputType="numberDecimal"
            android:singleLine="true" />

        <EditText
            android:id="@+id/rotacao_medicao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/rotacao"
            android:inputType="numberDecimal"
            android:singleLine="true" />

    </LinearLayout>


</RelativeLayout>