<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    tools:context=".FotosFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_conjunto"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:textStyle="bold"
            android:textSize="30sp"/>
        <ImageButton
            android:id="@+id/btn_foto_conjunto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_camera"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
        <ImageView
            android:id="@+id/foto_conjunto"
            android:layout_width="@dimen/fotos_size"
            android:layout_height="@dimen/fotos_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:text="@string/title_motor_bomba"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btn_foto_motor_bomba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:src="@android:drawable/ic_menu_camera" />

        <ImageView
            android:id="@+id/foto_motor_bomba"
            android:layout_width="@dimen/fotos_size"
            android:layout_height="@dimen/fotos_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:text="@string/title_placa"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btn_foto_placa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:src="@android:drawable/ic_menu_camera" />

        <ImageView
            android:id="@+id/foto_placa"
            android:layout_width="@dimen/fotos_size"
            android:layout_height="@dimen/fotos_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:text="@string/title_banco_capacitores"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btn_foto_banco_capacitores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:src="@android:drawable/ic_menu_camera" />

        <ImageView
            android:id="@+id/foto_banco_capacitores"
            android:layout_width="@dimen/fotos_size"
            android:layout_height="@dimen/fotos_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:text="@string/title_painel"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btn_foto_painel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:src="@android:drawable/ic_menu_camera" />

        <ImageView
            android:id="@+id/foto_painel"
            android:layout_width="@dimen/fotos_size"
            android:layout_height="@dimen/fotos_size" />
    </LinearLayout>

</LinearLayout>