<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorLight"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:text="@string/main_title"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />


    <!--
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="233dp"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="@color/colorLight"
        android:text="@string/Começar"
        android:textSize="60sp"/>
    -->

    <Button
        android:id="@+id/btnStart"
        android:layout_width="266dp"
        android:layout_height="65dp"
        android:layout_below="@+id/btnExportCsv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-167dp"
        android:background="@drawable/start_btn"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/novo_registro"
        android:textColor="@color/colorLight"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnExportCsv"
        android:layout_width="278dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="194dp"
        android:background="@drawable/start_btn"
        android:backgroundTint="@color/colorAccent"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/exportar_csv"
        android:textColor="@color/colorLight"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        tools:srcCompat="@mipmap/logo_ufla_transparente" />


    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="424dp"
        android:textColor="@color/colorOpacity"
        android:textSize="20sp" />

</RelativeLayout>